infra/k8s/kyz/apps/default/sabnzbd/app/httproute.yaml
---
# yaml-language-server: $schema=https://gateway-api.sigs.k8s.io/geps/gep-1748
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
spec:
  hostnames:
    - sabnzbd.waltr.tech
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 80
